Требовать причины критических действий (#236)
* Требовать причины критических действий

* Синхронизировать валидацию причины в OpenAPI

* Зафиксировать совместимость архивного импорта

* Учесть замечания ревью по подтверждениям

* Отменять подтверждение при обновлении заявки
